<resources>
    <string name="app_name">My Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">Contact bewerken</string>
    <string name="title_create_contact">Contact aanmaken</string>
    <string name="hint_first_name">Voornaam</string>
    <string name="hint_last_name">Achternaam</string>
    <string name="hint_phonenumber">Telefoonnummer</string>
    <string name="hint_street">Straat</string>
    <string name="hint_housenumber">Huisnummer</string>
    <string name="hint_zipcode">Postcode</string>
    <string name="hint_city">Woonplaats</string>
    <string name="hint_email">E-mailadres</string>
    <string name="button_save">Opslaan</string>
    <string name="answer_yes">Ja</string>
    <string name="warning_empty_first_name">Voer op zijn minst een voornaam in</string>
    <string name="warning_cant_call">Om te bellen moet er een telefoonnummer ingevoerd zijn</string>
    <string name="alert_discard_change_title">Teruggaan</string>
    <string name="alert_discard_change_content">Weet u zeker dat u terug wilt en de veranderingen ongedaan wilt maken?</string>
    <string name="alert_delete_contact_title">Contact verwijderen</string>
    <string name="alert_delete_contact_content">Weet u zeker dat u het contact wilt verwijderen?</string>
    <string name="answer_no">Nee</string>
    <string name="contacts">Contacten</string>
    <string name="map">Map</string>
</resources>
